调整代码结构

--- a/demo.html
+++ b/demo.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>PageDown Demo Page</title>
-        <link rel="stylesheet" type="text/css" href="demo.css" />
-        <script type="text/javascript" src="../../Markdown.Converter.js"></script>
-        <script type="text/javascript" src="../../Markdown.Sanitizer.js"></script>
-        <script type="text/javascript" src="../../Markdown.Editor.js"></script>
-       <script type="text/javascript" src="../../jquery.js"></script>
-       <script type="text/javascript" src="textarearesizer.js"></script>
+        <link rel="stylesheet" type="text/css" href="./css/demo.css" />
+        <script type="text/javascript" src="./js/Markdown.Converter.js"></script>
+        <script type="text/javascript" src="./js/Markdown.Sanitizer.js"></script>
+        <script type="text/javascript" src="./js/Markdown.Editor.js"></script>
+        <script type="text/javascript" src="./js/jquery.js"></script>
+        <script type="text/javascript" src="./js/textarearesizer.js"></script>
     </head>
     <body>
         <div class="wmd-panel">
@@ -15,7 +15,7 @@
             <textarea class="wmd-input" id="wmd-input">
             </textarea>
         </div>
-        <div id="wmd-preview" class="wmd-panel wmd-preview"></div>
+        <div id="wmd-preview" class="wmd-panel wmd-preview fmt"></div>
 
      <script type="text/javascript">
             /* jQuery textarea resizer plugin usage */
