调整代码结构

--- a/demo.html
+++ b/demo.html
@@ -7,13 +7,11 @@
         <script type="text/javascript" src="./js/Markdown.Sanitizer.js"></script>
         <script type="text/javascript" src="./js/Markdown.Editor.js"></script>
         <script type="text/javascript" src="./js/jquery.js"></script>
-        <script type="text/javascript" src="./js/textarearesizer.js"></script>
     </head>
     <body>
         <div class="wmd-panel">
             <div id="wmd-button-bar"></div>
-            <textarea class="wmd-input" id="wmd-input">
-            </textarea>
+            <textarea class="wmd-input" id="wmd-input"></textarea>
         </div>
         <div id="wmd-preview" class="wmd-panel wmd-preview fmt"></div>
 
